add images to 15

--- a/content/3-open-questions/15.md
+++ b/content/3-open-questions/15.md
@@ -38,7 +38,9 @@ Artists use canvas in a variety of ways: unstretched, sewn, pierced, or formed i
 
 A woven fabric made from a single type of fiber (e.g., flax) is a composite influenced by the way it is grown or synthesized and then processed into yarn ready for weaving. The various levels of hierarchy in the structure influence, in differing degrees, the overall fabric behavior. The yarn type, diameter, flatness, and stiffness affect flexibility and moisture response. The density of fiber yarns and type of weave influence yarn mobility, stiffness, drape, fracture toughness, and permeability ([[Young and Jardine 2012]]). The fabric permeability affects moisture response, consolidation, impregnation, and lining treatments ([[Young and Ackroyd 2001]]).
 
-Additionally, surface or impregnating coatings (e.g., size, paint, and consolidants) affect tensile, shear, bending properties, yarn mobility, and fracture toughness. For traditional Western paintings, we have a good experimental and empirical understanding of the complex composite of woven fabric and coatings. Research into the behavior of double-sided painted cloth such as trade union banners ([**fig. 15.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-1)) ([[Smith, [Thompson,](http://eprints.gla.ac.uk/view/author/17095.html) and [Hermens](http://eprints.gla.ac.uk/view/author/4846.html) 2016]]) or the behavior of twill and more complex weaves, however, is in its infancy (see “Reconstructing Weaves” below). Certainly, more research is required to determine the dominant contributing factors in the mechanical and hydromechanical behavior of canvas when new materials and techniques are used in contemporary art or used in mixed media and with new synthetic artists materials such as water-mixable oil paint, inks, or acrylic primed spun polyester canvas (see “Reconstructions for the Contemporary Use of Canvas” below).
+Additionally, surface or impregnating coatings (e.g., size, paint, and consolidants) affect tensile, shear, bending properties, yarn mobility, and fracture toughness. For traditional Western paintings, we have a good experimental and empirical understanding of the complex composite of woven fabric and coatings. Research into the behavior of double-sided painted cloth such as trade union banners ([fig. 15.1](#fig-15-1)) ([[Smith, Thompson, and Hermens 2016]]) or the behavior of twill and more complex weaves, however, is in its infancy (see “Reconstructing Weaves” below). Certainly, more research is required to determine the dominant contributing factors in the mechanical and hydromechanical behavior of canvas when new materials and techniques are used in contemporary art or used in mixed media and with new synthetic artists materials such as water-mixable oil paint, inks, or acrylic primed spun polyester canvas (see “Reconstructions for the Contemporary Use of Canvas” below).
+
+{% figure 'fig-15-1' %}
 
 Prediction of painted canvas properties from experimental mechanical and chemical data is the first step. Testing on single-constituent yarns, free films, single layers, and/or simple multilayers provides invaluable information that relates to both the present and past and to changes in properties caused by natural aging and conservation treatments. However, these are relatively simple interactions and therefore only partially representative. Conservation treatments themselves are a valuable source of “live” empirical data of the real complex interactions, but they are not easily reproducible. Nevertheless, many years of experience adds up to a powerful knowledge base of possible outcomes.
 
@@ -58,11 +60,19 @@ Several factors make the strain distribution within canvas complex: it is a wove
 
 The biaxial restraint of the canvas alters the strain distribution around the tacks or staples, becoming progressively more complex toward the corners. At the macro level, the strain patterns induced by the attachments are similar, with closer spacing resulting in more even strain distribution. If the attachments pass through preprimed canvas there is reduced local cusping, because of the greater resistance of uncracked primed canvas to distortion in the bias direction of the canvas. The restraint imposed by tight corner folds reduces the high load that would be imposed on the attachments near the corners if a loosely folded corner was keyed out. Nevertheless, shrinkage of the canvas or keying out will lead to significant strain concentrations in these areas. The strain irregularities become significantly less if the canvas is attached on the rear face of the stretcher rather than the side. Staples are effective attachments until the canvas between the legs begins to slip; then tears may occur because the staple leg creates very high strain concentrations. Tacks appear to be as effective in restraining the canvas and less likely to cause tears ([[Young and Hibberd 2000]]).
 
-Bicubic spline modelling (validated by ESPI) was the first computational model of a painting to incorporate the stretcher, staples, corner folds, and frictional forces. The inclusion in the model of the measured coefficient of friction of 0.63 for a pine stretcher bar showed that areas of high strain move outward toward the edges of the stretcher. **[Figs. 15.2](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-2)** and **[15.3](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-3)** compare the measured strain obtained using ESPI with the modeled strain for the same canvas properties and loading conditions. The close correlation of the two distributions in terms of overall magnitude and specific features is very good. This gives a high level of confidence in using a bicubic spline model to predict modes of failure and improve upon the present methods of tensioning canvas by simulating the strains induced in canvas under different conditions ([[Brew, Lewis, and Young 2016]]).
+Bicubic spline modelling (validated by ESPI) was the first computational model of a painting to incorporate the stretcher, staples, corner folds, and frictional forces. The inclusion in the model of the measured coefficient of friction of 0.63 for a pine stretcher bar showed that areas of high strain move outward toward the edges of the stretcher. [Figs. 15.2](#fig-15-2) and [15.3](#fig-15-3) compare the measured strain obtained using ESPI with the modeled strain for the same canvas properties and loading conditions. The close correlation of the two distributions in terms of overall magnitude and specific features is very good. This gives a high level of confidence in using a bicubic spline model to predict modes of failure and improve upon the present methods of tensioning canvas by simulating the strains induced in canvas under different conditions ([[Brew, Lewis, and Young 2016]]).
 
-ESPI has also been a useful tool for evaluating structural conservation treatments, for instance, tear mending. A painting will have high strains near the tear and strain concentrations at the ends of the tear, which are sites for potential propagation of the tear. If a tear is close to a corner or a tack/staple, this situation will be exacerbated because of the nonuniform loading. Implicit in restoring the mechanical integrity of a painting is the requirement to reestablish a uniform strain field across the painting—or at least one whose average strain is commensurate ([[Young 2003]]). This can be seen for the Heiber (thread-by-thread) tear mend strain map shown in **[fig. 15.4](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-4)** for an acrylic primed canvas under 50 N biaxial tension. Redistribution, reduction, or eradication of strain concentrations (one color in the map) implies a uniform strain field. Both the patch ([**fig. 15.5**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-5)) and the Heiber mend demonstrate that this can be achieved to some degree.
+{% figure 'fig-15-2' %}
 
-In both cases residual strain concentrations are present. For the Heiber—or any equivalent tear mend—reducing these concentrations below these levels is very hard to achieve by visual inspection alone. A “perfect” mend would eliminate strain concentrations around the original fracture site, preventing potential propagation of the tear. Similarly, any patch should have high fracture toughness and minimal stiffness. The patch strain map (see [**fig. 15.5**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-5)) shows that the level of strain concentrations has been reduced, but small discontinuities in strain occur at the edges of the patch.
+{% figure 'fig-15-3' %}
+
+ESPI has also been a useful tool for evaluating structural conservation treatments, for instance, tear mending. A painting will have high strains near the tear and strain concentrations at the ends of the tear, which are sites for potential propagation of the tear. If a tear is close to a corner or a tack/staple, this situation will be exacerbated because of the nonuniform loading. Implicit in restoring the mechanical integrity of a painting is the requirement to reestablish a uniform strain field across the painting—or at least one whose average strain is commensurate ([[Young 2003]]). This can be seen for the Heiber (thread-by-thread) tear mend strain map shown in [fig. 15.4](#fig-15-4) for an acrylic primed canvas under 50 N biaxial tension. Redistribution, reduction, or eradication of strain concentrations (one color in the map) implies a uniform strain field. Both the patch ([fig. 15.5](#fig-15-5)) and the Heiber mend demonstrate that this can be achieved to some degree.
+
+{% figure 'fig-15-4' %}
+
+{% figure 'fig-15-5' %}
+
+In both cases residual strain concentrations are present. For the Heiber—or any equivalent tear mend—reducing these concentrations below these levels is very hard to achieve by visual inspection alone. A “perfect” mend would eliminate strain concentrations around the original fracture site, preventing potential propagation of the tear. Similarly, any patch should have high fracture toughness and minimal stiffness. The patch strain map (see [fig. 15.5](#fig-15-5)) shows that the level of strain concentrations has been reduced, but small discontinuities in strain occur at the edges of the patch.
 
 Patches, which impart additional flexural stiffness with the aim of keeping the tear flat, are likely to result in an area of lower strain across the patch, but also larger discontinuities. The adhesive and type of adhesive interface will be the major factors in determining whether a tear mend is strong enough to withstand “normal” stress distributions within the canvas. The onset of failure will be evident as an increase in strain concentrations while loading.
 
@@ -78,9 +88,13 @@ The literature on the moisture response of canvas paintings and the key findings
 
 ### Moisture Response of Original Supports
 
-Most of the data in the literature on moisture response relates to uniaxial testing. The results, however, can be misleading, as uniaxially the canvas is unconstrained in one direction, and this is not representative of the stresses that build up under biaxial constraint on a stretcher. Nonetheless, careful experimental design and interpretation can mitigate this difference. One of the most valuable resources for measuring moisture response has come from deaccessioned paintings and from nineteenth-century primed loose-linings. [**Fig. 15.6**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-6) shows the typical load response in the weft and warp direction for a primed loose-lining produced by Roberson colormen ([[Carlyle, [Young,](http://eprints.gla.ac.uk/view/author/37894.html) and Jardine 2008]]). The tension in the two directions drops until an inversion occurs at 70% RH, where the tension starts to rise as relative humidity increases.
+Most of the data in the literature on moisture response relates to uniaxial testing. The results, however, can be misleading, as uniaxially the canvas is unconstrained in one direction, and this is not representative of the stresses that build up under biaxial constraint on a stretcher. Nonetheless, careful experimental design and interpretation can mitigate this difference. One of the most valuable resources for measuring moisture response has come from deaccessioned paintings and from nineteenth-century primed loose-linings. [Fig. 15.6](#fig-15-6) shows the typical load response in the weft and warp direction for a primed loose-lining produced by Roberson colormen ([[Carlyle, Young, and Jardine 2008]]). The tension in the two directions drops until an inversion occurs at 70% RH, where the tension starts to rise as relative humidity increases.
 
-This pattern occurs for many oil-primed canvases (loose-linings), as was demonstrated by Hedley under uniaxial tension ([[Hedley 1998]]). The initial drop in tension is attributed to the size layer becoming softer as it absorbs moisture, until it reaches a gelatinous state. Simultaneously, the fibers in the canvas are absorbing moisture. At some point, the swollen fibers cause the canvas to contract, and because it is tacked in place the tension rises. Typically, the tension in the weft direction increases significantly more than the warp because it has less crimp. The major influences on where this inversion occurs are weave density and the glue size application. Inversions have been measured from between 65% to 85% RH for nineteenth-century English commercially glue-sized oil-primed canvases and glue-sized new canvas. [**Fig. 15.7**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/fig-15-7) shows the response of another Roberson primed loose-lining with the inversion at 65% RH ([[Carlyle, [Young,](http://eprints.gla.ac.uk/view/author/37894.html) and Jardine 2008]]; [[Carr et al. 2003]]).
+{% figure 'fig-15-6' %}
+
+This pattern occurs for many oil-primed canvases (loose-linings), as was demonstrated by Hedley under uniaxial tension ([[Hedley 1998]]). The initial drop in tension is attributed to the size layer becoming softer as it absorbs moisture, until it reaches a gelatinous state. Simultaneously, the fibers in the canvas are absorbing moisture. At some point, the swollen fibers cause the canvas to contract, and because it is tacked in place the tension rises. Typically, the tension in the weft direction increases significantly more than the warp because it has less crimp. The major influences on where this inversion occurs are weave density and the glue size application. Inversions have been measured from between 65% to 85% RH for nineteenth-century English commercially glue-sized oil-primed canvases and glue-sized new canvas. [Fig. 15.7](#fig-15-7) shows the response of another Roberson primed loose-lining with the inversion at 65% RH ([[Carlyle, Young, and Jardine 2008]]; [[Carr et al. 2003]]).
+
+{% figure 'fig-15-7' %}
 
 ### Moisture Response of Linings
 
@@ -100,7 +114,7 @@ Reconstruction of canvas weaves is a relatively new approach. It has come about 
 
 While the clarity of the original weave was hard to discern, a trained eye (in this case, Dr. Dan Coughlan, curator and master weaver at Paisley Museum, Scotland) identified the weave as a huckaback, which is a plain weave with a floating warp. Hence, he was able to set up the weaving pattern for a traditional four-frame hand loom. Linen and jute yarn samples were sourced from Jos Vanneste, a Belgian linen company. The closest match to a yarn fragment from the painting was a linen yarn, which was then woven into a canvas by a local Scottish weaver. Empirical testing found that the canvas was more stable on the bias than an equivalent plain weave without a floating warp, and it developed less cusping when tacked onto a stretcher.
 
-The canvas was also prepared with a traditional double ground layer, and, interestingly, drying cracks within these layers were of a very similar size and pattern ([[Brunton 2018]]). A more systematic and controlled set of tests are now being performed on these samples using the biaxial tensile tester in the Conservation Research Laboratory at the Hunterian, Glasgow University. Such reconstructions are useful not only for understanding the complexity of canvas but also for possible use as fabrics for structural treatments. Having control over the weaving process allows for a bespoke pattern (see [Loermans’s poster](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/15-Young/paper-47) in these proceedings) and, combined with testing, the ability to tune its properties.
+The canvas was also prepared with a traditional double ground layer, and, interestingly, drying cracks within these layers were of a very similar size and pattern ([[Brunton 2018]]). A more systematic and controlled set of tests are now being performed on these samples using the biaxial tensile tester in the Conservation Research Laboratory at the Hunterian, Glasgow University. Such reconstructions are useful not only for understanding the complexity of canvas but also for possible use as fabrics for structural treatments. Having control over the weaving process allows for a bespoke pattern (see [Loermans’s poster](/8-posters/46/) in these proceedings) and, combined with testing, the ability to tune its properties.
 
 ## Reconstructions for the Contemporary Use of Canvas
 
