--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -67,7 +67,7 @@ A complex problem we needed to solve was recovering the adhesion of paint layers
 
 To adhere the paint layers to the original canvas, two coats of Aquazol 500 were applied at two distinct times. First, Aquazol 500 in acetone at 10%[^10] was applied to guarantee good adhesion of the areas that presented wax and nonpolar substances. Later, a second application of the same resin dissolved at 5% in a solution of acetone and water (1:1) was used to effectively increase the flattening of the canvas.
 
-After the complete evaporation of solvents, always keeping the painting tensioned,[^11] the thermoplastic adhesive was reactivated by heat in a vacuum bag (envelope). Heat was transferred to the adhesive using water at a predetermined temperature, provided by a movable temporary “tub.” The materials needed to carry out this intervention are shown in ([fig. 11.4](#fig-11-4)). The painting was placed facedown in a vacuum bag made of silicone-coated polyester film (Melinex). On the top of this bag, a tub made of a Melinex sheet placed in a wooden loom[^12] was prepared. A certain volume of water, preheated to a predetermined temperature, was poured into the tub. After ten minutes,[^13] the water was removed, and the tub was shifted to treat another area. This operation was repeated to treat the whole surface, always keeping the painting under pressure in the vacuum bag.[^14]
+After the complete evaporation of solvents, always keeping the painting tensioned,[^11] the thermoplastic adhesive was reactivated by heat in a vacuum bag (envelope). Heat was transferred to the adhesive using water at a predetermined temperature, provided by a movable temporary “tub.” The materials needed to carry out this intervention are shown in [fig. 11.4](#fig-11-4). The painting was placed facedown in a vacuum bag made of silicone-coated polyester film (Melinex). On the top of this bag, a tub made of a Melinex sheet placed in a wooden loom[^12] was prepared. A certain volume of water, preheated to a predetermined temperature, was poured into the tub. After ten minutes,[^13] the water was removed, and the tub was shifted to treat another area. This operation was repeated to treat the whole surface, always keeping the painting under pressure in the vacuum bag.[^14]
 
 {% figure 'fig-11-4' %}
 
@@ -93,7 +93,7 @@ This adhesive was sprayed on the stretched polyester canvas.[^19] Particular att
 
 Before lining the painting facedown in the vacuum system, it was necessary to fill the biggest losses with stucco, to avoid the original canvas being pushed towards the paint surface, where paint layers were missing.
 
-The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer, to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described earlier and outlined in ([fig. 11.4](#fig-11-4)). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
+The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer, to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described earlier and outlined in [fig. 11.4](#fig-11-4). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
 
 
 Not all the losses were filled and retouched, because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.5](#fig-11-5)).
