Add images to 16

--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -46,9 +46,13 @@ Previous studies have reported on this topic, but to date no standardized protoc
 
 The general workflow of this study is as follows: yarn samples were taken from both new and artificially aged fabrics as well as from original canvas paintings. The maximum tensile strength at zero length of single yarn samples was determined using the newly developed method described in more detail below. Then identical sample material was disassembled into single fibers and the intrinsic viscosity (limiting viscosity number) determined.
 
-The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ([[Lichtblau 2007]]). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force=500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [**Fig. 16.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
+The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ([[Lichtblau 2007]]). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force=500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Fig. 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
 
-In order to apply this technology to yarn samples and use it as a standard method for the study of paintings, it was modified for this project. The basis for the study is provided by the standards listed in **[table 16.1](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/table-16-1),** from which relevant aspects were adopted. The following criteria were developed:
+{% figure 'fig-16-1' %}
+
+In order to apply this technology to yarn samples and use it as a standard method for the study of paintings, it was modified for this project. The basis for the study is provided by the standards listed in [table 16.1](#table-16-1), from which relevant aspects were adopted. The following criteria were developed:
+
+**table 'table-16-1'**
 
 -   Theoretically three different types of samples were conceivable: twisted yarns, untwisted yarns, and single fibers. However, in the case of twisted yarn premature damage of the sample can be excluded. In addition, for this configuration, a maximal correlation of the results with the strength of the canvas is expected.
 
@@ -68,11 +72,15 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 -   The time effort for the whole experiment should be minimized.
 
-To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol as outlined in **[table 16.2](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/table-16-2),** which shows the final parameters that allowed us to fulfill our criteria.
+To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol as outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
+
+**table 'table-16-1'**
 
 For conducting a measurement for one canvas, the following steps were performed:
 
-1.  After determining the sample mass and length, the tensile strength was measured on twelve yarn sections (5 mm each) following the standard protocol ([**fig. 16.2**](fig-16-2)).
+1.  After determining the sample mass and length, the tensile strength was measured on twelve yarn sections (5 mm each) following the standard protocol ([fig. 16.2](#fig-16-2)).
+
+{% figure 'fig-16-2' %}
 
 2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f~H~*) was calculated following *f*~H~ = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ([[Reumann 2000]]).
 
@@ -94,15 +102,19 @@ From the new and artificially aged fabrics, samples of warp and weft were taken 
 
 ## Results
 
-The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [**Fig. 16.3a**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/fig-16-3) shows the average of the diameter-normalized maximum tensile strength (*f~H~* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging show the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
+The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Fig. 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (*f~H~* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging show the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
+
+{% figure 'fig-16-3' %}
 
 For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19) the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth centuries, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
-[**Fig. 16.3b**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (*f~H~*; see **fig. 16.3a**), show a smaller gap between the artificially and the historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see **fig. 16.3a**), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
+[Fig. 16.3b](#fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (*f~H~*; see [fig. 16.3a](#fig-16-3)), show a smaller gap between the artificially and the historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see [fig. 16.3a](#fig-16-3)), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
 
-Surprisingly, we observed an anomaly for the artificially aged wefts that is consistent throughout both methods: the wefts that were aged longer show slightly higher values than wefts aged for shorter periods. Since this phenomenon appears with both methods, the result seems to be sample specific. This anomaly could be caused by the inhomogeneity of the material. In comparison, the historical samples generally show lower values. For technical reasons, the viscosity measurements were conducted at two different temperatures (18°C and 19°C, shown in [**fig. 16.3b**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/fig-16-3) in light and dark gray, respectively).
+Surprisingly, we observed an anomaly for the artificially aged wefts that is consistent throughout both methods: the wefts that were aged longer show slightly higher values than wefts aged for shorter periods. Since this phenomenon appears with both methods, the result seems to be sample specific. This anomaly could be caused by the inhomogeneity of the material. In comparison, the historical samples generally show lower values. For technical reasons, the viscosity measurements were conducted at two different temperatures (18°C and 19°C, shown in [fig. 16.3b](#fig-16-3) in light and dark gray, respectively).
 
-The correlation of the data determined by the two different methods is plotted in [**fig. 16.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/16-Braeunig/16-Braunig_clean/fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (*f~H~*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (*f~H~* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (*f~H~* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
+The correlation of the data determined by the two different methods is plotted in [fig. 16.4](#fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (*f~H~*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (*f~H~* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (*f~H~* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
+
+{% figure 'fig-16-4' %}
 
 In contrast to capillary viscometry, the tensile strength of the yarn measured with zero-span distance still could be influenced by yarn geometry. In addition, for the historic samples, remaining material such as a binding agent may influence the tensile strength. For the low values, the results of both methods do not completely align with the dating of the samples. In other words, a canvas from the sixteenth century may show a higher tensile strength than a canvas from the seventeenth century. This shows that the dating by itself is not sufficient to conclude on the tensile strength. The pretreatments of the canvases and the respective conditions under which the paintings were stored may have a significant influence on their material state.
 
